# Home-Automation-Interface

./: .gitignore  README.md
enclosure/exports/: Home automation interface.mtl
hardware/Home_Automation_Interface_HAT/: Home_Automation_Interface_HAT.kicad_prl  Home_Automation_Interface_HAT.kicad_pro
software/: CMakeLists.txt  CMakePresets.json  README.md
software/application/: CMakeLists.txt  main.cpp  ui_window.h
software/application/windows/: radar_window.cpp  radar_window.h  status_window.cpp  status_window.h  system_overview_window.cpp  system_overview_window.h
software/application/windows/image_loader/: image_loader.cpp  image_loader.h
